terraform/modules/vpc/main.tf
#----------VPC----------
# enable_dns_hostnames required for SSM VPC endpoint private DNS resolution
resource "aws_vpc" "vpc" {

    tags = {
        Name = "${var.project_name}-vpc"
        Environment = var.environment
    }

    cidr_block = var.aws_vpc_cidr_block

    #-----Allows domain name resolution inside the VPC (e.g. rds.amazonaws.com --> private IP)-----
    # Enables DNS resolution inside the VPC.
    # Without this, instances cannot resolve AWS service domain names.
    # Example:
    #   your EC2 tries to connect to RDS using:
    #   mydb.xxxxxx.us-east-1.rds.amazonaws.com
    #   --> if false, this domain will NOT resolve (connection fails)
    #   --> if true,  this domain resolves to a private IP (works!)
    enable_dns_support = true

    # Gives each EC2 instance a public DNS hostname automatically.
    # Without this, EC2 instances get an IP but NO hostname.
    # Example:
    #   Your EC2 public IP is 52.86.29.38
    #   --> if false, you only get:  52.86.29.38  (IP only)
    #   --> if true,  you also get:  ec2-52-86-29-38.compute-1.amazonaws.com
    #-----Also, required for SSM VPC endpoint private DNS resolution-----
    enable_dns_hostnames = true 
  
}

#----------IGW----------
# Connects VPC to public internet
# Internet Gateway = door between VPC and public internet
resource "aws_internet_gateway" "igw" {

    tags = {
        Name = "${var.project_name}-igw"
        Environment = var.environment
    }

    vpc_id = aws_vpc.vpc.id
  
}

#----------Public Subnet----------
# NAT Gateway lives here - no bastion, access via SSM only
resource "aws_subnet" "public_subnets" {

    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project_name}-public-subnet-${count.index +1}"
        Environment = var.environment

        Tier = "public"
    }

    availability_zone = var.azs[count.index]

    cidr_block = var.public_subnet_cidrs[count.index]
    count = length(var.public_subnet_cidrs)
    
    # EC2 gets public IP -> internet can reach it
    map_public_ip_on_launch = true 

}

#----------Private Subnet----------
# App server lives here - outbound via NAT only, not reachable from internet
# More secure - not reachable from internet directly
resource "aws_subnet" "private_subnets" {

    vpc_id = aws_vpc.vpc.id

    tags = {
        Name = "${var.project_name}-private-subnet-${count.index +1}"
        Environment = var.environment

        Tier = "private"
    }

    availability_zone = var.azs[count.index]

    cidr_block = var.private_subnet_cidrs[count.index]
    count = length(var.private_subnet_cidrs)

    map_public_ip_on_launch = false

  
}

#----------Elastic IP for NAT----------
# If single_nat_gateway = true  -> creates 1 EIP only
# If single_nat_gateway = false -> creates 1 EIP per AZ
# Fixed public IP for NAT Gateway
# Create Elastic IP first(NAT Gateway needs it)
# Elastic IP for NAT Gateway
# NAT Gateway needs a fixed public IP to work
resource "aws_eip" "nat_eips" {

    # Means: "This Elastic IP is for VPC use"
    # Used INSIDE a VPC
    domain = "vpc"

    tags = {
        Name = "${var.project_name}-eip-nat-${count.index +1}"
        Environment = var.environment
    }

    count = var.single_nat_gateway ? 1 : length(var.azs)

}

#----------NAT Gateway----------
# Private subnet outbound internet: EIP -> NAT -> IGW -> internet
# IGW must exist first — no direct reference so depends_on required
# Sits in PUBLIC subnet
# Allows private subnet resources to reach internet (outbound only)
# App server uses this to pull Docker images from Docker Hub
# depends_on = IGW must exist before NAT Gateway
#EIP → NAT Gateway → IGW → internet
resource "aws_nat_gateway" "nat_gateways" {

    tags = {
        Name = "${var.project_name}-nat-gateway-${count.index +1}"
        Environment = var.environment
    }

    subnet_id = aws_subnet.private_subnets[count.index].id

    # This NAT Gateway faces the public internet
    connectivity_type = "public" 

    allocation_id = aws_eip.nat_eips[count.index].id

    # depends_on = IGW must exist before NAT Gateway can route traffic to internet
    # IGW has no direct reference in this resource so must declare manually
    # explicit dependency
    # NAT Gateway ALWAYS needs IGW to exist first
    #-----IGW must exist before NAT can route-----
    depends_on = [ aws_internet_gateway.igw ]

    # true -> count = 1 -> 1 NAT Gateway created
    # false -> count = length(var.azs) -> 3 NAT Gateways created
    count = var.single_nat_gateway ? 1 : length(var.azs)
  
}

#──────────────────────────────────────────────────────────────────────────────────
#----------Public Route Table----------
# PUBLIC Route Table
#   → Used by PUBLIC subnets
#   → Rule: "all internet traffic → go through Internet Gateway"
#   → ONE route table shared by all public subnets
# Route Table = A set of rules that tells network traffic WHERE to go
# Route Table  =  Road signs in a city
# Routes       =  Individual signs ("To Airport -> Turn Left")

# Without road signs → cars get lost, traffic goes nowhere
# With road signs    → traffic knows exactly where to go

# All public subnets use the SAME Internet Gateway
# -> Only ONE IGW exists per VPC
# -> So ONE route table is enough for all public subnets

#    public-subnet-1 ──┐
#    public-subnet-2 ──┼──→ same route table → Internet Gateway
#    public-subnet-3 ──┘

# Routes all internet traffic through IGW
# Used by public subnet (bastion + NAT Gateway)
#---Route Table = A set of rules that tells network traffic WHERE to go---
resource "aws_route_table" "public_rt" {
  
    tags = {
        Name = "${var.project_name}-public-rt-${count.index +1}"
        Environment = var.environment
    }

    vpc_id = aws_vpc.vpc.id

    # All traffic -> Internet Gateway -> Internet directly
    route {

        #"ALL traffic" or "every IP address on the internet"
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id

    }

}

#----------Route Table Association (Public Route Table + Public Subnet)----------
# Connects public route table to public subnet
resource "aws_route_table_association" "public" {

    route_table_id = aws_route_table.public_rt.id

    subnet_id = aws_subnet.public_subnets[count.index].id

    count = length(var.azs)
  
}

#----------Private Route Table----------
# PRIVATE Route Tables
#   → Used by PRIVATE subnets
#   → Rule: "all internet traffic → go through NAT Gateway"
#   → ONE route table PER AZ (because each AZ has its own NAT Gateway)

# Each private subnet uses a DIFFERENT NAT Gateway
# → One NAT Gateway per AZ
# → So each AZ needs its OWN route table

#    private-subnet-1 ──→ route table 1 → NAT Gateway 1 (us-east-1a)
#    private-subnet-2 ──→ route table 2 → NAT Gateway 2 (us-east-1b)
#    private-subnet-3 ──→ route table 3 → NAT Gateway 3 (us-east-1c)

# Routes all internet traffic through NAT Gateway
# Used by private subnet (app server)
# Outbound only — nobody from internet can reach private subnet

# If single_nat_gateway = true -> all private subnets route through 1 NAT Gateway
# If single_nat_gateway = false -> each private subnet routes through its own NAT Gateway
resource "aws_route_table" "private_rt" {

    tags = {
        Name = "${var.project_name}-private-rt"
        Environment = var.environment
    }

    vpc_id = aws_vpc.vpc.id

    # "All traffic -> NAT Gateway -> Internet indirectly"
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.single_nat_gateway ? aws_nat_gateway.nat_gateways[0].id : aws_nat_gateway.nat_gateways[count.index].id
    }
  
}

#----------Route Table Association (Private Route Table + Private Subnet)----------
# Connects private route table to private subnet

resource "aws_route_table_association" "private" {

    route_table_id = aws_route_table.private.id

    subnet_id = aws_subnet.private_subnets[count.index].id 

    count = length(var.azs) 

}
